...
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="80dp"
    tools:context=".LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textEmailAddress"
            android:hint="Correo"
            android:textColor="@android:color/black"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
...
        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="111dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_below="@id/layoutpassword"
                android:layout_marginTop="30dp"
                android:background="@android:color/transparent"
                android:freezesText="false"
                android:gravity="center_vertical|center_horizontal"
                android:text="Iniciar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/link_regist"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="288dp"
                android:gravity="bottom|center_horizontal"
                android:text="Registrate!!"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

        </LinearLayout>

...
