<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagen_R"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_add_circle_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="VectorDrawableCompat" />

            <Button
                android:id="@+id/show_options_button"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_redondo"
                android:text="Agregar Imagen" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="Nombre"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="Correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="Telefono Celular"
            android:inputType="phone" />

        <EditText
            android:id="@+id/txtTelefono_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="Telefono FIjo"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Genero:"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/txtSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Preferencia:"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/txtRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <Button
            android:id="@+id/btnInsertar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_redondo"
            android:text="INSERTAR" />
    </LinearLayout>

</RelativeLayout>
